appointment/static/src/scss/appointment.scss
.o_appointment_attendee_form input::placeholder {
    color: darkgrey;
}

.o_appointment_index {
    min-height: 80vh;
    .o_half_screen_height {
        min-height: 200px !important;
    }
    .o_appointment_appointments_list {
        header {
            a {
                transition: all .25s ease-in-out;
                &:hover, &:focus {
                    transform: scale(1.05);
                }
            }
        }
        .appointments_list_columns {
            header {
                height: 200px;
            }
        }
        .o_appointment_unpublished {
            bottom: 0;
            padding: $card-spacer-y $card-spacer-x;
        }
    }
}

.o_appointment_selection {
    select {
        appearance: none;
    }
    select::-ms-expand {
        display: none;
    }
}

.modal-open {
    > .modal-backdrop {
        z-index: $zindex-dropdown - 1;
    }
}

.o_appointment_days {
    font-size: 16px;
    height: 40px;
    .o_weekend {
        background-color: mix(map-get($theme-colors, 'primary'), $body-bg, 30%);
        color: color-yiq(mix(map-get($theme-colors, 'primary'), $body-bg, 30%));
    }
    .o_day{
        border: 2px solid map-get($theme-colors, 'primary');
        border-radius: 0.5rem;
        cursor: pointer;
        &.dropdown{
            padding: 0px;
        }
        .o_slots_dropdown{
             padding: 8px;
        }
    }
    .o_day:hover, .o_slot_selected {
        color: color-yiq(map-get($theme-colors, 'primary'));
        background-color: map-get($theme-colors, 'primary');
    }
    .o_mute_day {
        opacity: 0.5
    }
    .o_today{
        position: relative;
        div {
            border-bottom: 3px solid #f0ad4e;
        }
    }
}

.o_appointment_month {
    .table {
        border-collapse: separate;
        border-spacing: unset;
    }

    .table th, .table td {
        width: 3em;
    }
}

// Class used to adapt the color of the svg picture to the chosen theme's color
.o_fill_color_1 {
    fill: o-color("o-color-1");
}

.o_appointment {
    .o_appointment_availabilities {
        @media screen and (min-device-width: 769px) {
            min-height: 31em;
        }
        .o_slots_list {
            a {
                color: $body-color;
            }
            a:hover {
                color: color-yiq(map-get($theme-colors, 'primary'));
            }
        }
    }
    /* Progress Wizard */
    ul.wizard {
        padding: 0;
        margin-top: 20px;
        list-style: none outside none;
        -webkit-border-radius: 4px;
        -moz-border-radius: 4px;
        border-radius: 4px;
        -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.065);
        -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.065);
        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.065);
    }

    ul.wizard li {
        border: 1px solid #d4d4d4;
        border-right-width: 0;
        position: relative;
        float: left;
        padding: 0 10px 0 20px;
        margin: 0;
        line-height: 38px;
        background: $body-bg;
    }

    ul.wizard li .chevron {
        position: absolute;
        top: 0;
        right: -10px;
        z-index: 1;
        display: block;
        border: 20px solid transparent;
        border-right: 0;
        border-left: 10px solid #d4d4d4;
    }

    ul.wizard li .chevron:before {
        position: absolute;
        top: -20px;
        right: 1px;
        display: block;
        border: 20px solid transparent;
        border-right: 0;
        border-left: 10px solid #fbfbfb;
        content: "";
    }

    ul.wizard li.text-muted {
        background: mix(map-get($theme-colors, 'primary'), $body-bg, 10%);
    }

    ul.wizard li.text-muted .chevron:before {
        border-left: 10px solid mix(map-get($theme-colors, 'primary'), $body-bg, 10%);
    }

    ul.wizard li.text-primary {
        background-color: mix(map-get($theme-colors, 'primary'), $body-bg, 20%);
    }

    ul.wizard li.text-primary .chevron:before {
        border-left: 10px solid mix(map-get($theme-colors, 'primary'), $body-bg, 20%);
    }

    ul.wizard li:first-child {
        padding-left: 15px;
        border-radius: 4px 0 0 4px;
    }

    ul.wizard li:last-child {
        border-radius: 0 4px 4px 0;
        border-right-width: 1px;
    }

    ul.wizard li:last-child .chevron {
        display: none;
    }

    .o_appointment_attendee_form {
        input {
            background-color: $body-bg;
            color: $body-color;
        }
    } 
}

.o_appointment, .o_appointment_choice, {
    select {
        background-color: $body-bg;
        color: $text-muted;
        &:focus {
            background-color: $body-bg;
            color: $body-color;
        }
        &:disabled {
            background-color: mix(map-get($theme-colors, 'primary'), $body-bg, 30%);
            color: $text-muted;
        }
    }

    .alert-info a {
        color: $info;
    }
}

