[FIX] appointment: missed BS5 color-contrast conversion
This commit properly convert `color-yiq` SCSS function calls by
replacing them with `color-contrast`.

Reference:
https://getbootstrap.com/docs/5.1/migration/#sass

closes odoo/enterprise#29792

--- a/appointment/static/src/scss/appointment.scss
+++ b/appointment/static/src/scss/appointment.scss
@@ -48,7 +48,7 @@
     height: 40px;
     .o_weekend {
         background-color: mix(map-get($theme-colors, 'primary'), $body-bg, 30%);
-        color: color-yiq(mix(map-get($theme-colors, 'primary'), $body-bg, 30%));
+        color: color-contrast(mix(map-get($theme-colors, 'primary'), $body-bg, 30%));
     }
     .o_day{
         border: 2px solid map-get($theme-colors, 'primary');
@@ -62,7 +62,7 @@
         }
     }
     .o_day:hover, .o_slot_selected {
-        color: color-yiq(map-get($theme-colors, 'primary'));
+        color: color-contrast(map-get($theme-colors, 'primary'));
         background-color: map-get($theme-colors, 'primary');
     }
     .o_mute_day {
@@ -102,7 +102,7 @@
                 color: $body-color;
             }
             a:hover {
-                color: color-yiq(map-get($theme-colors, 'primary'));
+                color: color-contrast(map-get($theme-colors, 'primary'));
             }
         }
     }
